--- a/home.html
+++ b/home.html
@@ -4,7 +4,7 @@
     <link rel="icon" href="logo.jpg" style="border-radius: 50%;">
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body style="background-color: #e3e6f3;">
     <div id="firstbox">
     <section id="header">
         <a href="#"><img src="logo.png" class="logo" style="width: 100px; height: 100px; border-radius: 10px;"></a>
@@ -20,16 +20,99 @@
             </ul>
         </div>
     </section>
-    <input type="text" placeholder="search" id="searchbar"><button>search</button>
+    <input type="text" placeholder="search" id="searchbar"><button>search</button><br>
+    <a href="" id="vegsection"><h3 class="lolo">Vegitables</h3> <h3 class="lolo">service</h3><h3 class="lolo">Fruiits</h3><h3 class="lolo">My Order</h3><h3 class="lolo">help line</h3></a>
     </div>
     <div class="apple">
-        <a href=""><img src="granny smith apple.jpeg" alt="" width="198px" height="198px"></a>
-        <p>granny smith apple <br>
-        <h4 style="display: inline;">$40</h4><h3 style="color: red; display: inline;">-60%</h3>
-        
-        </p>
-        
+       <a href="apple.html"><img src="granny smith apple.jpeg" width="199" height="199" alt=""></a>
+        <h3>granny smith apple</h3>
+        <p><button>$40 USD</button></p>
 
     </div>
+    <div class="grapes">
+        <a href="grapes.html"><img src="sangiovesee.jpg" width="199" height="199" alt=""></a>
+         <h3>Grapes-sangiovese</h3>
+         <p><button>$60 USD</button></p>
+ 
+     </div>
+     <div class="pineapple">
+        <a href="pineapple.html"><img src="pineapple.jpg" width="199" height="199" alt=""></a>
+         <h3>Pine Apple</h3>
+         <p><button>%30 USD</button></p>
+ 
+     </div>
+     <div class="strawberry">
+        <a href=""><img src="strawberry.jpg" width="199" height="199" alt=""></a>
+         <h3>strawberry</h3>
+         <p><button>$89 USD</button></p>
+ 
+     </div>
+     <div class="banana">
+        <a href=""><img src="banana.jpg" width="199" height="199" alt=""></a>
+         <h3>Banana</h3>
+         <p><button>$20 USD</button></p>
+ 
+     </div>
+     <div class="orange">
+        <a href=""><img src="orange.jpg" width="199" height="199" alt=""></a>
+         <h3>orange</h3>
+         <p><button>$40 USD</button></p>
+ 
+     </div>
+     <div class="drogan">
+        <a href=""><img src="drogan fruit.webp" width="199" height="199" alt=""></a>
+         <h3>Drogan fruit</h3>
+         <p><button>$40 USD</button></p>
+ 
+     </div>
+     <div class="wattermelon">
+        <a href=""><img src="water melon.jpg" width="199" height="199" alt=""></a>
+         <h3>wattermelon</h3>
+         <p><button>$50 USD</button></p>
+ 
+     </div>
+     <div class="pears">
+        <a href=""><img src="pears.jpg" width="199" height="199" alt=""></a>
+         <h3>Pears</h3>
+         <p><button>$40 USD</button></p>
+ 
+     </div>
+     <div class="goava">
+        <a href=""><img src="goava.jpg" width="199" height="199" alt=""></a>
+         <h3>Goava</h3>
+         <p><button>$59 USD</button></p>
+ 
+     </div>
+     <div class="cherry">
+        <a href=""><img src="cherry.jpg" width="199" height="199" alt=""></a>
+         <h3>Cherry</h3>
+         <p><button>$38 USD</button></p>
+ 
+     </div>
+     <div class="coconut">
+        <a href=""><img src="coconut.jpg" width="199" height="199" alt=""></a>
+         <h3>Coconut</h3>
+         <p><button>$80 USD</button></p>
+ 
+     </div>
+     <div class="amla">
+        <a href=""><img src="amla.jpg" width="199" height="199" alt=""></a>
+         <h3>Amla</h3>
+         <p><button>$56 USD</button></p>
+ 
+     </div>
+     <div class="tomato">
+        <a href=""><img src="tomato.jpg" width="199" height="199" alt=""></a>
+         <h3>Tomato</h3>
+         <p><button>$50 USD</button></p>
+ 
+     </div>
+     <div class="rambutan">
+        <a href=""><img src="rambutan.webp" width="199" height="199" alt=""></a>
+         <h3>Rambutan</h3>
+         <p><button>$40 USD</button></p>
+ 
+     </div>
+
 </body>
 </html>
